--- a/index.html
+++ b/index.html
@@ -1,67 +1,152 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="icon" href="medicare.png">
+<link rel="stylesheet" href="stylo.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Medicare Clinic Patient Portal</title>
-	<link rel="icon" type="image/png" href="medicare.png">
-
-<style>
-	body {margin: 0;padding: 0;font-family: Arial, sans-serif;display: flex;height: 100vh;}
-	.left {flex: 1;display: flex;justify-content: center;align-items: center;padding: 20px;background-color: #f9f9ff;}
-	.left .form-container {width: 100%;max-width: 500px;display: flex;flex-direction: column;align-items: center; justify-content: center;}
-	.left h1 {font-size: 2rem;margin-bottom: 10px;color: #333;}
-	.left p {color: #666;margin-bottom: 20px;}
-
-	.form-group {margin-bottom: 20px;width: 100%;justify-content: center;align-items: center;}
-	.form-group label {display: block;margin-bottom: 5px;font-size: 0.9rem;justify-content: center;align-items: center;}
-	.form-group input {width: 95%;padding: 10px;font-size: 1rem;border: 1px solid #ddd;border-radius: 5px;outline: none;transition: border 0.3s;}
-	.forgot-password {color: black;font-size: 0.9rem;display: block;text-align: right;margin-top: -15px;margin-bottom: 10px;}
-	.form-group input:focus {border-color: #78B3CE;}
-
-	.login-btn {width: 500px;padding: 12px;font-size: 1rem;background-color: #2F3645;color: #fff;border: none;border-radius: 5px;cursor: pointer;transition: 	background-color 0.3s;}
-	.login-btn:hover {background-color: #78B3CE;}
-
-	.footer {text-align: center;margin-top: auto;}
-	.footer a {text-decoration: none;color: #2F3645;font-weight: bold;transition: color 0.3s;}
-	.footer a:hover {color: #78B3CE;}
-
-	.right {flex: 1;background: url('bg.jpg') no-repeat center center;background-size: cover;}
-	.help-button {position: absolute;bottom: 20px;right: 20px;background: white;color: #00274d;padding: 10px 15px;border: none;border-radius: 5px;font-size: 	0.9rem;font-weight: bold;cursor: pointer;transition: background 0.3s ease;}
-	.help-button:hover {background: #B5C0D0;color: #00274d;}
-	.help-message {display: none;position: absolute;bottom: 70px;right: 20px;background: #fff;border: 1px solid #ccc;border-radius: 5px;padding: 10px;box-shadow: 0 	5px 15px rgba(0, 0, 0, 0.2);font-size: 0.9rem;color: #333;width: 300px;}
-	.help-button:hover + .help-message {display: block;}
-  </style>
+	<title>Dashboard</title>
+	
+	<style>
+	.content { margin-left: 250px; padding: 20px; }
+	.container {max-width: 1200px;margin: 20px auto;padding: 20px;}
+	.dashboard-grid {display: grid;grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));gap: 20px;}
+	.card {background-color: white;border-radius: 10px;box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);padding: 20px;text-align: center;transition: transform 0.3s;}
+	.card:hover {transform: translateY(-5px);}
+	.card-icon {font-size: 40px;color: #4CAF50;margin-bottom: 15px;}
+	.card-title {font-size: 18px;font-weight: bold;margin-bottom: 10px;}
+	.card-description {color: #555;font-size: 14px;}
+	.download-link {color: #2c3e50;text-decoration: none;font-weight: bold;}
+	.download-link:hover {text-decoration: underline;}
+	</style>
 </head>
+
 <body>
-  <div class="left">
-    <div class="form-container">
-        <center><img src="logomc.png" style="width: 70%;" alt="Medicare Clinic Logo"></center>
-      <center><h1>Welcome to Patient Portal!</h1></center>
-      <p style="margin-left: 50px; color: black;">Log in to your account</p>
-    <form action="dashboard.html" method="POST">
-        <div class="form-group">
-          <label for="email">Email</label>
-          <input type="email" id="email" name="email" placeholder="Enter your email" required>
-        </div>
-        <div class="form-group">
-          <label for="password">Password</label>
-          <input type="password" id="password" name="password" placeholder="Enter your password" required>
-        </div>
-        <div class="form-group">
-            <a href="#" class="forgot-password">Forgot your password?</a>
+
+<div class="header">
+	<div class="logo">
+	<img src="logomc.png" alt="PatientPortal Logo">
+	<h1>Patient Portal</h1>
 	</div>
-        <center><button type="submit" class="login-btn">Log In</button></center>
-      </form>
-      <div class="footer">
-        <center><p>Don't have an account? <a href="register.html"><u>Sign Up</u></a></p></center>
-        <center><p style="color: #555; font-size: 10px;">© 2025 Medicare Clinic.</p></center>
+	<div class="user-section">
+	<div class="user-info">
+	<a href="logout.html"><img src="logout.png" alt="Logout Icon" ></a>
+	</div>
+	</div>
+</div>
+
+<div class="sidebar">
+	<div class="logo">
+	<img src="user.png" alt="User Avatar">
+	<span>Welcome!</span>
+	<b><sub>IMRAN HAZWAN BIN AZZAM</sub></b>
+	<br><i><sub>Patient</sub></i>
+	</div>
+	<ul class="menu">
+		<li><a href="dashboard.html" target="_blank">DASHBOARD</a></li>
+		<li><a href="profile.html" target="_blank">PATIENT PROFILE</a></li>
+		<li class="dropdown">
+		<a href="upcoming appt.html" target="_blank">APPOINTMENT <i class="fas fa-caret-down"></i></a>
+	<ul class="dropdown-content">
+		<li><a href="book appt.html" target="_blank">Book An Appointment</a></li>
+		<li><a href="history.html" target="_blank">Appointment History</a></li>
+	</ul>
+		</li>
+	<li><a href="prescription.html" target="_blank">PRESCRIPTIONS</a></li>
+	<li><a href="doctors.html" target="_blank">DOCTORS</a></li>
+	<li><a href="faq.html" target="_blank">FAQ</a></li>
+	</ul>
+</div>
+</div>
+
+
+<div class="content">
+  <div class="container">
+    <h1>Welcome to Your Dashboard</h1>
+    <p>Access your health information and manage your clinic appointments easily.</p>
+
+    <div class="dashboard-grid">
+      <!-- Appointments -->
+      <div class="card">
+        <div class="card-icon">📅</div>
+        <div class="card-title"><a href="upcoming appt.html" class="download-link" target="_blank">Appointments</a></div>
+        <div class="card-description">View, schedule, or reschedule your appointments.</div>
+      </div>
+
+      <!-- Medical Records -->
+      <div class="card">
+        <div class="card-icon">📂</div>
+        <div class="card-title"><a href="records.html" class="download-link" target="_blank">Medical Records</a></div>
+        <div class="card-description">Access your past consultations and reports.</div>
+      </div>
+
+      <!-- Prescriptions -->
+      <div class="card">
+        <div class="card-icon">💊</div>
+        <div class="card-title"><a href="prescription.html" class="download-link" target="_blank">Prescriptions</a></div>
+        <div class="card-description">View your prescription history.</div>
+      </div>
+
+      <!-- Notifications -->
+      <div class="card">
+        <div class="card-icon">🔔</div>
+        <div class="card-title"><a href="notifications.html" class="download-link" target="_blank">Notifications</a></div>
+        <div class="card-description">Stay updated with clinic announcements and reminders.</div>
+      </div>
+
+      <!-- Profile Management -->
+      <div class="card">
+        <div class="card-icon">👤</div>
+        <div class="card-title"><a href="profile.html" class="download-link" target="_blank">Profile</a></div>
+        <div class="card-description">View your personal and next of kin information.</div>
+      </div>
+
+      <!-- Billing -->
+      <div class="card">
+        <div class="card-icon">💳</div>
+        <div class="card-title"><a href="billing.html" class="download-link" target="_blank">Billing</a></div>
+        <div class="card-description">View your bills and make payments online.</div>
       </div>
     </div>
   </div>
-  <div class="right"></div>
-    <button class="help-button">Help</button>
-    <div class="help-message">If you need assistance, please contact the IT help desk at helpdesk@medicareclinic.my or call +603-1234-5678.</div>
+</div>
+
+<footer>
+	<div class="footer-container">
+
+		<div class="footer-section contact-info">
+			<h3>Contact Us</h3>
+			<p>Medicare Clinic, 17,</p>
+			<p>Jalan Adda 7, Adda Heights,</p>
+			<p>81100 Johor Bahru, Johor.</p>
+		</div>
+
+		<div class="footer-section social-icons">
+			<a href="https://www.youtube.com/@kpjhealthcaretv" target="_blank" class="social-link">
+				<i class="fab fa-whatsapp"></i>
+			</a>
+			<a href="mailto:medicareclinic@mail.my" target="_blank" class="social-link">
+				<i class="far fa-envelope"></i>
+			</a>
+			<a href="https://www.instagram.com/kpjhealthcareberhadofficial/" target="_blank" class="social-link">
+				<i class="fab fa-instagram"></i>
+			</a>
+			<a href="https://www.facebook.com/KPJHealthTourismMalaysia?mibextid=ZbWKwL" target="_blank" class="social-link">
+				<i class="fab fa-facebook-f"></i>
+			</a>
+		</div>
+
+		<div class="footer-section operation-hour">
+			<h3>Operation Hour</h3>
+			<p>Everyday:</p>
+			<p>9.00 AM - 10.00 PM</p>
+		</div>
+	</div>
+
+	<div class="copyright">
+		&copy; 2025 Medicare Clinic. All rights reserved.
+	</div>
 </body>
 </html>
